# sampleFp16

./: CMakeLists.txt  Makefile  README.md  main.c  main.cpp
